# sic

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  LICENSES_DEPENDENCIES  Makefile  Makefile.toml  NOTICE  README.md  RELEASE_STEPS.md  TODO.md  about.hbs  about.toml  bors.toml  build.rs  deny.toml  justfile  rustfmt.toml  setup_rav1e.ps1
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-release-binaries.yml  ci.yml  clippy.yml  coverage.yml  deny.yml  msrv.yml  rustfmt.yml  test.yml
.justfiles/: clippy.just  dav1d.just  deny.just  fmt.just  msrv.just  test.just
cli_runner/: encoding_flags
combostew/: .gitignore  .travis.yml  Cargo.toml  README.md  RELEASE_STEPS.md
combostew/examples/: updepl.rs
combostew/resources/: credits.txt
combostew/src/: io.rs  lib.rs
combostew/src/operations/: engine.rs  mod.rs  mod_test_includes.rs
combostew/src/operations/wrapper/: filter_type.rs
combostew/src/processor/: conversion.rs  encoding_format.rs  license_display.rs  mod.rs  mod_test_includes.rs
combostew/thankyou/: licenses.txt
components/sic_cli/: Cargo.toml
components/sic_cli/src/: cli.rs  common_dir.rs  config.rs  lib.rs  license.rs  operations.rs  pipeline.rs
components/sic_cli/src/pipeline/: mod.rs  seq.rs
components/sic_cli_operations/: Cargo.toml
components/sic_cli_operations/src/: errors.rs  lib.rs
components/sic_cli_operations/src/validation/: long_arg.rs  mod.rs  short_arg.rs
components/sic_cli_ops/: Cargo.toml
components/sic_cli_ops/src/: errors.rs  lib.rs  operations.rs
components/sic_core/: Cargo.toml
components/sic_core/src/: errors.rs  lib.rs
components/sic_image_engine/: Cargo.toml
components/sic_image_engine/src/: engine.rs  errors.rs  lib.rs
components/sic_image_engine/src/helper/: resize.rs
components/sic_image_engine/src/operations/: blur.rs  brighten.rs  contrast.rs  crop.rs  diff.rs  draw_grid.rs  draw_text.rs  filter3x3.rs  flip_horizontal.rs  flip_vertical.rs  grayscale.rs  horizontal_gradient.rs  hue_rotate.rs  invert.rs  mod.rs  overlay.rs  resize.rs  rotate180.rs  rotate270.rs  rotate90.rs  threshold.rs  unsharpen.rs  vertical_gradient.rs
components/sic_image_engine/src/wrapper/: draw_text_inner.rs  filter_type.rs  font_options.rs  gradient_fn.rs  gradient_input.rs  image_path.rs  mod.rs  overlay.rs
components/sic_imageproc/: Cargo.toml
components/sic_io/: Cargo.toml
components/sic_io/src/: conversion.rs  errors.rs  export.rs  format.rs  import.rs  lib.rs  load.rs  save.rs
components/sic_parser/: Cargo.toml
components/sic_parser/src/: errors.rs  grammar.pest  lib.rs  named_value.rs  rule_parser.rs  value_parser.rs
components/sic_testing/: Cargo.toml
components/sic_testing/src/: lib.rs
crates/sic_cli_ops/: Cargo.toml
crates/sic_cli_ops/src/: lib.rs  operations.rs
crates/sic_core/: Cargo.toml
crates/sic_core/src/: animated.rs  errors.rs  lib.rs
crates/sic_image_engine/: Cargo.toml
crates/sic_image_engine/src/: engine.rs  errors.rs  lib.rs
crates/sic_image_engine/src/helper/: mod.rs  resize.rs
crates/sic_image_engine/src/operations/: diff.rs  draw_text.rs  filter3x3.rs  hue_rotate.rs  overlay.rs  resize.rs  rotate90.rs  threshold.rs
crates/sic_image_engine/src/wrapper/: draw_text_inner.rs  filter_type.rs  font_options.rs  image_path.rs  overlay.rs
crates/sic_io/: Cargo.toml
crates/sic_io/src/: conversion.rs  decode.rs  encode.rs  encode_settings.rs  errors.rs  format.rs  import.rs  lib.rs  preprocessor.rs
crates/sic_io/src/encode/: bmp.rs  dynamic.rs  jpeg.rs
crates/sic_io/src/encode_settings/: gif.rs  pnm.rs
crates/sic_io/src/format/: jpeg.rs
crates/sic_io/src/preprocessor/: color_type.rs  pick_frame.rs
crates/sic_parser/: Cargo.toml
crates/sic_parser/src/: errors.rs  named_value.rs  rule_parser.rs  value_parser.rs
crates/sic_testing/: Cargo.toml
crates/sic_testing/src/: lib.rs
docs/: cli_help_script.txt  cli_help_script_blur.txt  cli_help_script_brighten.txt  cli_help_script_contrast.txt  cli_help_script_filter3x3.txt  cli_help_script_fliph.txt  cli_help_script_flipv.txt  cli_help_script_grayscale.txt  cli_help_script_huerotate.txt  cli_help_script_invert.txt  cli_help_script_resize.txt  cli_help_script_rotate180.txt  cli_help_script_rotate270.txt  cli_help_script_rotate90.txt  cli_help_script_unsharpen.txt  help.txt
examples/: gen_completions.rs  update_dep_licenses.rs
publish/: Cargo.toml  readme.md
publish/src/: backup.rs  commit.rs  main.rs  publish_crate.rs
resources/: credits.txt
sic_config/: Cargo.toml
sic_core/: Cargo.toml
sic_image_engine/: Cargo.toml
sic_io/: Cargo.toml
sic_io/src/: conversion.rs  encoding_format.rs  format.rs  import.rs  lib.rs  load.rs  save.rs
sic_parser/: Cargo.toml
sic_testing/: Cargo.toml
sic_user_manual/: Cargo.toml
src/: app_cli.rs  app_custom_config.rs  app_run.rs  combinators.rs  config.rs  lib.rs  main.rs  tests.rs
tasks/: install_nasm_linux.sh  install_nasm_macos.sh  install_nasm_ubuntu.sh
tasks/publish/: .gitignore  Cargo.toml  readme.md
tasks/publish/src/: arguments.rs  backup.rs  main.rs  publish_crate.rs  topological_workspace.rs  update_manifest.rs
tasks/publish/src/pipeline/: commit.rs  mod.rs  publish_crate.rs  update_dependents.rs  update_manifest.rs
tests/: cli_convert.rs  cli_glob.rs  cli_image_operation_args.rs  cli_image_operations_script_from_file.rs  cli_imageproc_ops.rs  cli_input_output.rs  cli_license.rs  cli_output_format_decider_fallback.rs  cli_user_manual.rs
thanks/: dependency_licenses.txt  licenses.html
tools/: install_nasm_macos.sh
tools/cargo-publish-workspace/: Cargo.toml  readme.md
tools/cargo-publish-workspace/src/: arguments.rs  main.rs  package.rs
tools/cargo-publish-workspace/src/pipeline/: publish_crate.rs  tag.rs  update_dependents.rs  update_manifest.rs
tools/pack-release/: .gitignore  Cargo.toml  readme.md
tools/pack-release/src/: actions.rs  main.rs
tools/pack-release/src/actions/: mod.rs  update_dep_licenses.rs
user_manual/: cli_help_script_fliph.txt  cli_help_script_flipv.txt
(+81 files in other folders)
