[package]
name = "sic"
version = "0.19.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Accessible image processing and conversion from the terminal (and a front-end for the 'image' crate)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "README.md"
exclude = [
    ".idea/*",
    ".vscode/*",
    "*.iml",
    ".travis.yml",
    "RELEASE_STEPS.md",
]
keywords = ["image", "converter", "cli", "front-end", "image-cli"]
categories = ["multimedia::images", "command-line-utilities"]

edition = "2021"
rust-version = "1.56"

[workspace]
members = [
    "components/sic_cli_ops",
    "components/sic_core",
    "components/sic_image_engine",
    "components/sic_io",
    "components/sic_parser",
    "components/sic_testing",
    "tools/pack-release",
]

[dependencies]
sic_cli_ops = { version = "0.19.0", path = "components/sic_cli_ops" }
sic_core = { version = "0.19.0", path = "components/sic_core" }
sic_io  = { version = "0.19.0", path = "components/sic_io" }
sic_image_engine = { version = "0.19.0", path = "components/sic_image_engine" }
sic_parser = { version = "0.19.0", path = "components/sic_parser"}

anyhow = "1.0.55"
atty = "0.2.14"
clap = "2.34.0"
globwalk = "0.8.1"
open = "2.1.1"
strum = "0.24.0"

[dev-dependencies]
clap = "2.34.0" # for examples/gen_completions.rs
parameterized = "0.3.1"

[build-dependencies]

[features]
default = ["imageproc-ops"]
imageproc-ops = ["sic_cli_ops/imageproc-ops", "sic_image_engine/imageproc-ops", "sic_parser/imageproc-ops"]

output-test-images = []

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

