[package]
name = "sic"
version = "0.22.3"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Accessible image processing and conversion from the terminal (and a front-end for the 'image' crate)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "README.md"
exclude = [
    ".idea/*",
    ".vscode/*",
    "*.iml",
    ".travis.yml",
    "RELEASE_STEPS.md",
]
keywords = ["image", "converter", "cli", "front-end", "image-cli"]
categories = ["multimedia::images", "command-line-utilities"]

edition = "2021"
rust-version = "1.63"

[package.metadata.release]
tag-prefix = ""

[workspace]
members = [
    "crates/sic_cli_ops",
    "crates/sic_core",
    "crates/sic_image_engine",
    "crates/sic_io",
    "crates/sic_parser",
    "crates/sic_testing",
]

[dependencies]
sic_cli_ops = { version = "0.22.0", path = "crates/sic_cli_ops" }
sic_core = { version = "0.22.0", path = "crates/sic_core" }
sic_io  = { version = "0.22.0", path = "crates/sic_io" }
sic_image_engine = { version = "0.22.0", path = "crates/sic_image_engine" }
sic_parser = { version = "0.22.0", path = "crates/sic_parser" }

anyhow = "1"
atty = "0.2.14"
clap = "2.34.0"
globwalk = "0.8.1"
open = "4.2.0"

[dev-dependencies]
clap = "2.34.0" # for examples/gen_completions.rs
parameterized = "1.0.1"

[build-dependencies]

[features]
default = ["imageproc-ops"]
imageproc-ops = ["sic_core/imageproc-ops", "sic_cli_ops/imageproc-ops", "sic_image_engine/imageproc-ops", "sic_parser/imageproc-ops"]

output-test-images = []

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
