[package]
name = "sic_io"
version = "0.1.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sic_core = { path = "../sic_core" }
sic_config = { path = "../sic_config" }

[dev-dependencies]
sic_testing = { path = "../sic_testing" }