[package]
name = "sic_cli"
version = "0.10.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: provides the cli interface."
edition = "2018"
license-file = "../../LICENSE"
repository = "https://github.com/foresterre/sic"

[dependencies]
sic_core = { path = "../../components/sic_core", version = "0.10" }
sic_io  = { path = "../../components/sic_io", version = "0.10" }
sic_image_engine = { path = "../../components/sic_image_engine", version = "0.10" }
sic_parser = { path = "../../components/sic_parser", version = "0.10" }

anyhow = "1.0"
atty = "0.2.14"
clap = "2.32.0"
inflate = "0.4.5"

[dev-dependencies]
sic_testing = { path = "../../components/sic_testing" }
