[package]
name = "sic_cli_ops"
version = "0.19.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: parses images operations invoked from the cli."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"

[dependencies]
sic_image_engine = { version = "0.19.0", path = "../../components/sic_image_engine" }
sic_parser = { version = "0.19.0", path = "../../components/sic_parser" }

clap = "2.33.3"
strum = "0.21.0"
strum_macros = "0.22.0"
thiserror = "1.0.30"

[dev-dependencies]
sic_core = { version = "0.19.0", path = "../../components/sic_core" }
sic_testing = { version = "0.19.0", path = "../../components/sic_testing" }
parameterized = "0.3.1"

[features]
imageproc-ops = []
