[package]
name = "sic_cli_ops"
version = "0.20.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: parses images operations invoked from the cli."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2021"
rust-version = "1.56"


[dependencies]
sic_image_engine = { version = "0.20.0", path = "../../components/sic_image_engine" }
sic_parser = { version = "0.20.0", path = "../../components/sic_parser" }

clap = "2.34.0"
strum = "0.24.0"
strum_macros = "0.24.0"
thiserror = "1.0.30"

[dev-dependencies]
sic_core = { version = "0.20.0", path = "../../components/sic_core" }
sic_testing = { version = "0.20.0", path = "../../components/sic_testing" }
parameterized = "0.3.1"

[features]
imageproc-ops = []
