[package]
name = "sic_core"
version = "0.19.1"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: re-exports global dependencies to sub-crates."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2021"
rust-version = "1.56"

[dependencies]
image = { version = "0.24.1", features = ["avif"] }

imageproc-patched = { version = "0.22.0-unofficial.1-foresterre", optional = true }
rusttype = { version = "0.9.2", optional = true }

thiserror = "1.0.30"

[features]
imageproc-ops = ["imageproc-patched", "rusttype"]