[package]
name = "sic_core"
version = "0.20.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: re-exports global dependencies to sub-crates."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2021"
rust-version = "1.56"

[dependencies]
image = { version = "0.24.2", features = ["avif"] }

imageproc = { version = "0.23.0", optional = true }
rusttype = { version = "0.9.2", optional = true }

thiserror = "1.0.31"

[features]
imageproc-ops = ["imageproc", "rusttype"]
