[package]
name = "sic_image_engine"
version = "0.16.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: provides abstractions for (the application of) image operations."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"

[dependencies]
sic_core = { version = "0.16.0", path = "../sic_core" }
sic_io = { version = "0.16.0", path = "../sic_io" }

strum = "0.20.0"
strum_macros = "0.20.1"
thiserror = "1.0.24"

imageproc = { version = "0.22.0", optional = true }
rusttype = { version = "0.9.2", optional = true }

[dev-dependencies]
sic_testing = { version = "0.16.0", path = "../sic_testing" }

[features]
imageproc-ops = ["imageproc", "rusttype"]
output-test-images = []
