[package]
name = "sic_image_engine"
version = "0.19.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: provides abstractions for (the application of) image operations."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"

[dependencies]
sic_core = { version = "0.19.0", path = "../sic_core" }
sic_io = { version = "0.19.0", path = "../sic_io" }

strum = "0.23.0"
strum_macros = "0.23.1"
thiserror = "1.0.30"

imageproc = { version = "0.22.0", optional = true }
rusttype = { version = "0.9.2", optional = true }

rayon = "1.5.1"

[dev-dependencies]
sic_testing = { version = "0.19.0", path = "../sic_testing" }

[features]
imageproc-ops = ["imageproc", "rusttype"]
output-test-images = []
