[package]
name = "sic_imageproc"
description = "imageproc component of 'sic': imageproc functions and filters used by sic ported to image 0.24"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
