[package]
name = "sic_io"
version = "0.19.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: provides accessible i/o around image formats."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"

[dependencies]
sic_core = { version = "0.19.0", path = "../sic_core"}

thiserror = "1.0.30"

[dev-dependencies]
parameterized = "0.3.1"
sic_testing = { version = "0.19.0", path = "../sic_testing" }
