[package]
name = "sic_parser"
version = "0.19.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: parser for the image operation script used by sic."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"

[dependencies]
sic_core = { version = "0.19.0", path = "../sic_core"}
sic_image_engine = { version = "0.19.0", path = "../sic_image_engine" }

pest = "2.5.3"
pest_derive = "2.5.3"
thiserror = "1"

[dev-dependencies]
sic_testing = { version = "0.19.0", path = "../sic_testing" }
parameterized = "0.3.1"

[features]
imageproc-ops = []
