[package]
name = "sic_testing"
version = "0.12.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: provides commonly used testing operations for sic crates."
edition = "2018"
license-file = "../../LICENSE"
repository = "https://github.com/foresterre/sic"

[dependencies]
sic_core = { version = "0.12.0", path = "../sic_core" }
parameterized  = "0.2.0"