[package]
name = "sic_testing"
version = "0.13.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: provides commonly used testing operations for sic crates."
edition = "2018"
license = "MIT"
repository = "https://github.com/foresterre/sic"

[dependencies]
sic_core = { version = "0.13.0", path = "../sic_core" }
parameterized  = "0.2.0"
