[package]
name = "sic_cli_ops"
version = "0.20.1"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: parses images operations invoked from the cli."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2021"
rust-version = "1.61"


[dependencies]
sic_image_engine = { version = "0.20.0", path = "../sic_image_engine" }
sic_parser = { version = "0.20.0", path = "../sic_parser" }

clap = "2.34.0"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1"

[dev-dependencies]
sic_core = { version = "0.20.0", path = "../sic_core" }
sic_testing = { version = "0.20.0", path = "../sic_testing" }
parameterized = "1.0.1"

[features]
imageproc-ops = []
