[package]
name = "sic_core"
version = "0.22.1"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: re-exports global dependencies to sub-crates."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2021"
rust-version = "1.61"

[dependencies]
imageproc = { version = "0.23.0", optional = true }
rusttype = { version = "0.9.3", optional = true }
thiserror = "1"

[dependencies.image]
version = "0.24.8"
features = [
    "avif", # requires (exe: nasm >= 2.14)
    "webp-encoder", # requires (native_dependency: libwebp)
]

[features]
imageproc-ops = ["imageproc", "rusttype"]
