[package]
name = "sic_core"
version = "0.22.1"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: re-exports global dependencies to sub-crates."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2021"
rust-version = "1.61"

[dependencies]
image = { version = "0.25.1", features = ["rayon"] }
imageproc = { version = "0.24.0", optional = true }
ab_glyph = { version = "0.2.23", optional = true }
thiserror = "1"

[features]
nasm = ["image/nasm"]
imageproc-ops = ["imageproc", "ab_glyph"]
