[package]
name = "sic_image_engine"
version = "0.20.1"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: provides abstractions for (the application of) image operations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2021"
rust-version = "1.56"

[dependencies]
sic_core = { version = "0.20.0", path = "../sic_core" }
sic_io = { version = "0.20.0", path = "../sic_io" }

strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.37"

rayon = "1.5.3"

[dev-dependencies]
sic_testing = { version = "0.20.0", path = "../sic_testing" }

[features]
imageproc-ops = ["sic_core/imageproc-ops"]
output-test-images = []
