[package]
name = "sic_io"
version = "0.22.1"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: provides accessible i/o around image formats."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2021"
rust-version = "1.61"

[dependencies]
sic_core = { version = "0.22.0", path = "../sic_core" }

thiserror = "2"

[dev-dependencies]
parameterized = "2.0.0"
sic_testing = { version = "0.22.0", path = "../sic_testing" }
