[package]
name = "sic_parser"
version = "0.22.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: parser for the image operation script used by sic."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2021"
rust-version = "1.61"

[dependencies]
sic_core = { version = "0.22.0", path = "../sic_core"}
sic_image_engine = { version = "0.22.0", path = "../sic_image_engine" }

pest = "2.5.7"
pest_derive = "2.5.7"
thiserror = "1"

[dev-dependencies]
sic_testing = { version = "0.22.0", path = "../sic_testing" }
parameterized = "1.0.1"

[features]
imageproc-ops = []
