[package]
name = "sic_testing"
version = "0.22.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Component of the sic cli: provides commonly used testing operations for sic crates."
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
readme = "../../README.md"

edition = "2021"
rust-version = "1.61"

[dependencies]
sic_core = { version = "0.22.0", path = "../sic_core" }
parameterized  = "1.0.1"
