[package]
name = "cargo-publish-workspace"
description = "Topologically publish a complete workspace with a single command"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic/tree/master/tasks/publish"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.32"
chrono = "0.4.15"
guppy = "0.5.0"
indicatif = "0.15.0"
toml_edit = "0.2.0"

# This is a workspace separate from sic. By inserting this empty workspace table, cargo keeps the workspaces separate.
[workspace]