[package]
name = "pack-release"
version = "0.1.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.5", default-features = false, features = ["deflate"] }

[workspace]