[package]
name = "pack-release"
description = "release packing tool for sic"
version = "0.20.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/sic"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.6", default-features = false, features = ["deflate"] }
xshell = "0.2.3"
